--- a/Resources/administration/src/app/component/media/sw-media-upload/sw-media-upload.html.twig
+++ b/Resources/administration/src/app/component/media/sw-media-upload/sw-media-upload.html.twig
@@ -59,7 +59,7 @@
                                 <sw-media-preview
                                     v-if="hasPreviewFile"
                                     class="sw-media-upload__preview"
-                                    :item="previewMediaEntity">
+                                    :source="preview">
                                 </sw-media-preview>
                             {% endblock %}
 
