NEXT-1004 - CR fixes

--- a/Resources/administration/src/module/sw-settings-rule/component/sw-condition-and-container/sw-condition-and-container.less
+++ b/Resources/administration/src/module/sw-settings-rule/component/sw-condition-and-container/sw-condition-and-container.less
@@ -1,3 +1,5 @@
+@import "~less/variables";
+
 .condition-and-container {
   .condition-content {
     padding-left: 20px;
@@ -9,9 +11,9 @@
 }
 
 .background--white {
-  background-color: #fff;
+  background-color: @color-white;
 }
 
 .background--gray {
-  background-color: #f0f2f5;
+  background-color: @color-light-gray;
 }
