--- a/Resources/administration/src/module/sw-settings-rule/component/sw-condition-not-found/sw-condition-not-found.html.twig
+++ b/Resources/administration/src/module/sw-settings-rule/component/sw-condition-not-found/sw-condition-not-found.html.twig
@@ -1,5 +1,6 @@
 {% block sw_condition_fields %}
-<sw-field type="text" class="field--value"
+<sw-field type="text"
+          class="field--value"
           :placeholder="$tc('global.sw-condition-group.condition.not-found.label')"
           :disabled="true">
     <template slot="suffix">
