--- a/Resources/administration/src/module/sw-settings-rule/component/sw-condition-billing-zip-code/sw-condition-billing-zip-code.html.twig
+++ b/Resources/administration/src/module/sw-settings-rule/component/sw-condition-billing-zip-code/sw-condition-billing-zip-code.html.twig
@@ -4,12 +4,12 @@
           v-model="condition.value.operator"
           class="field--operator">
     <template slot="options">
-        <option v-for="(operator, identifier) in operators" :value="operator.identifier">
+        <option v-for="operator in operators" :value="operator.identifier">
             {{ $tc(operator.label) }}
         </option>
     </template>
 </sw-field>
-<sw-condition-value multi id="zipCodes"
+<sw-condition-value multi
           class="field--value is--secondary"
           v-model="condition.value.zipCodes">
 </sw-condition-value>
