--- a/Resources/administration/src/module/sw-settings-rule/component/sw-condition-goods-count/sw-condition-goods-count.html.twig
+++ b/Resources/administration/src/module/sw-settings-rule/component/sw-condition-goods-count/sw-condition-goods-count.html.twig
@@ -4,13 +4,12 @@
           v-model="condition.value.operator"
           class="field--operator">
     <template slot="options">
-        <option v-for="(operator, identifier) in operators" :value="operator.identifier">
+        <option v-for="operator in operators" :value="operator.identifier">
             {{ $tc(operator.label) }}
         </option>
     </template>
 </sw-field>
-<sw-field id="count"
-          type="number"
+<sw-field type="number"
           step="1"
           class="field--value is--secondary"
           v-model="condition.value.count">
