--- a/Resources/administration/src/module/sw-settings-rule/component/sw-condition-line-item-with-quantity/sw-condition-line-item-with-quantity.html.twig
+++ b/Resources/administration/src/module/sw-settings-rule/component/sw-condition-line-item-with-quantity/sw-condition-line-item-with-quantity.html.twig
@@ -1,6 +1,5 @@
 {% block sw_condition_fields %}
-<sw-select id="id"
-           :store="getProductStore()"
+<sw-select :store="getProductStore()"
            class="sw-condition-group__field is--secondary"
            v-model="condition.value.id">
 </sw-select>
@@ -9,13 +8,12 @@
           v-model="condition.value.operator"
           class="field--operator">
     <template slot="options">
-        <option v-for="(operator, identifier) in operators" :value="operator.identifier">
+        <option v-for="operator in operators" :value="operator.identifier">
             {{ $tc(operator.label) }}
         </option>
     </template>
 </sw-field>
-<sw-field id="quantity"
-          type="number"
+<sw-field type="number"
           step="1"
           class="field--value is--secondary"
           v-model="condition.value.quantity">
