NEXT-1004 - add ids for sw-selections

--- a/Resources/administration/src/module/sw-settings-rule/component/sw-condition-billing-zip-code/sw-condition-billing-zip-code.html.twig
+++ b/Resources/administration/src/module/sw-settings-rule/component/sw-condition-billing-zip-code/sw-condition-billing-zip-code.html.twig
@@ -10,7 +10,8 @@
     </template>
 </sw-field>
 <sw-condition-value multi
-          class="field--value is--secondary"
-          v-model="condition.value.zipCodes">
+                    :id="condition.id"
+                    class="field--value is--secondary"
+                    v-model="condition.value.zipCodes">
 </sw-condition-value>
 {% endblock %}
