--- a/Resources/administration/src/module/sw-settings-rule/component/sw-condition-cart-amount/sw-condition-cart-amount.html.twig
+++ b/Resources/administration/src/module/sw-settings-rule/component/sw-condition-cart-amount/sw-condition-cart-amount.html.twig
@@ -9,8 +9,7 @@
         </option>
     </template>
 </sw-field>
-<sw-field id="amount"
-          type="number"
+<sw-field type="number"
           step="0.01"
           class="field--value is--secondary"
           v-model="condition.value.amount">
