--- a/Resources/administration/src/module/sw-settings-rule/component/sw-condition-sales-channel/sw-condition-sales-channel.html.twig
+++ b/Resources/administration/src/module/sw-settings-rule/component/sw-condition-sales-channel/sw-condition-sales-channel.html.twig
@@ -10,6 +10,7 @@
     </template>
 </sw-field>
 <sw-condition-value multi
+                    :id="condition.id"
                     :store="getSalesChannelStore()"
                     class="field--value is--secondary"
                     v-model="condition.value.salesChannelIds">
