--- a/Resources/administration/src/module/sw-settings-rule/component/sw-condition-billing-country/sw-condition-billing-country.html.twig
+++ b/Resources/administration/src/module/sw-settings-rule/component/sw-condition-billing-country/sw-condition-billing-country.html.twig
@@ -10,6 +10,7 @@
     </template>
 </sw-field>
 <sw-condition-value multi
+                    :id="condition.id"
                     :store="getCountryStore()"
                     class="field--value is--secondary"
                     v-model="condition.value.countryIds">
