--- a/Resources/administration/src/app/component/form/sw-field/sw-field.html.twig
+++ b/Resources/administration/src/app/component/form/sw-field/sw-field.html.twig
@@ -248,15 +248,22 @@
                                v-on="additionalEventListeners">
 
                         {% block sw_field_action_buttons %}
-                            <sw-button v-if="displayActionButtons" square class="sw-field--inline__button" @click="cancelSubmit">
+                            <sw-button v-if="displayActionButtons"
+                                       class="sw-field--inline__button sw-field--inline__button--cancel"
+                                       square
+                                       @click="cancelSubmit">
                                 {% block sw_field_inline_cancel_submit_button_icon %}
-                                    <sw-icon small name="small-default-x-line-medium"></sw-icon>
+                                    <sw-icon small name="small-default-x-line-small"></sw-icon>
                                 {% endblock %}
                             </sw-button>
 
-                            <sw-button v-if="displayActionButtons" square class="sw-field--inline__button sw-field--inline__submit" @click="submitValue">
+                            <sw-button v-if="displayActionButtons"
+                                       class="sw-field--inline__button sw-field--inline__button--submit"
+                                       square
+                                       variant="primary"
+                                       @click="submitValue">
                                 {% block sw_field_inline_submit_button_icon %}
-                                    <sw-icon small name="small-default-checkmark-line-medium"></sw-icon>
+                                    <sw-icon small name="small-default-checkmark-line-small"></sw-icon>
                                 {% endblock %}
                             </sw-button>
                         {% endblock %}
